force-app/main/default/objects/Case/fields/Complaint_Tier__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Tier__c</fullName>
    <inlineHelpText>Tier 1: Fraud (internal or external) is suspected and/or there is a likelihood of high monetary liability.
Tier 2: Company policies and/or SOPs were not followed, or company systems failed.
Tier 3: Customer remains dissatisfied, the issues are complex, or require some level of investigation. These complaints may still be handled by any department staff member but may require assistance from another department.
Tier 4: Issues are simple and relate to quality of service and/or minor processing delays.</inlineHelpText>
    <label>Complaint Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>