force-app/main/default/objects/Case/fields/Complex_Project__c.field-meta.xml
<CustomField>
    <fullName>Complex_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complex Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Complex_Project__c.Phase__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Complex_Project__c</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>Related_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>