force-app/main/default/objects/Case/fields/Compliance_Review__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Review__c</fullName>
    <label>Compliance Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>