force-app/main/default/objects/Case/fields/Connected_Partner__c.field-meta.xml
<CustomField>
    <fullName>Connected_Partner__c</fullName>
    <description>Partner with shared SLAs - Set on Account</description>
    <formula>IF( ISBLANK(Plan__c), TEXT( Account.Connected_Partner__c),  Plan__r.Connected_Partner__c)</formula>
    <inlineHelpText>Partner with shared SLAs - Set on Account</inlineHelpText>
    <label>Connected Partner</label>
    <type>Text</type>
</CustomField>