force-app/main/default/objects/Case/fields/Connected_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Connected_to_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connected to Project</label>
    <type>Checkbox</type>
</CustomField>