force-app/main/default/objects/Case/fields/Control_2_4_1_Situation__c.field-meta.xml
<CustomField>
    <fullName>Control_2_4_1_Situation__c</fullName>
    <label>Control 2.4.1 Situation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Wrongdoing</fullName>
            </value>
            <value>
                <fullName>Negligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>