force-app/main/default/objects/Case/fields/Control_2_4_1_Summary__c.field-meta.xml
<CustomField>
    <fullName>Control_2_4_1_Summary__c</fullName>
    <label>Control 2.4.1 Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>