force-app/main/default/objects/Case/fields/Correct_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Correct_Plan_Year__c</fullName>
    <description>Plan year (YYYY) funds will be in when adjustment is complete</description>
    <inlineHelpText>Plan year (YYYY) funds will be in when adjustment is complete</inlineHelpText>
    <label>Correct Plan Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>