force-app/main/default/objects/Case/fields/Current_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Current_Threshold__c</fullName>
    <description>Current force out threshold ($1k or $5k) before Force Out Survey is sent</description>
    <inlineHelpText>Current force out threshold ($1k or $5k) before Force Out Survey is sent</inlineHelpText>
    <label>Current Threshold</label>
    <length>25</length>
    <type>Text</type>
</CustomField>