force-app/main/default/objects/Case/fields/Custodian_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Custodian_Account_Id__c</fullName>
    <formula>Plan__r.Custodian_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custodian Account Id</label>
    <type>Text</type>
</CustomField>