force-app/main/default/objects/Case/fields/Custom_SLA_Active__c.field-meta.xml
<CustomField>
    <fullName>Custom_SLA_Active__c</fullName>
    <formula>Project_Deliverable__c &lt;&gt; NULL &amp;&amp; Project_Deliverable__c &lt;&gt; &apos;&apos;</formula>
    <label>Custom SLA Active</label>
    <type>Checkbox</type>
</CustomField>