force-app/main/default/objects/Case/fields/Customer_Re_Opened_Case__c.field-meta.xml
<CustomField>
    <fullName>Customer_Re_Opened_Case__c</fullName>
    <description>Date/Time that the customer re-engaged and re-opened case.</description>
    <inlineHelpText>Date/Time that the customer re-engaged and re-opened case.</inlineHelpText>
    <label>Customer Re-Opened Case</label>
    <type>DateTime</type>
</CustomField>