force-app/main/default/objects/Case/fields/Dashes_to_add_Case_to_Subject__c.field-meta.xml
<CustomField>
    <fullName>Dashes_to_add_Case_to_Subject__c</fullName>
    <defaultValue>&quot;___&quot;</defaultValue>
    <description>Hidden field used to include dashes between Subject and Case Number in Cases</description>
    <inlineHelpText>Hidden field used to include dashes between Subject and Case Number in Cases</inlineHelpText>
    <label>Dashes to add Case # to Subject</label>
    <length>10</length>
    <type>Text</type>
</CustomField>