force-app/main/default/objects/Case/fields/Days_Behind_On_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Days_Behind_On_Payroll__c</fullName>
    <description>Copied from Plan Record - Used on Late Payroll Cases to ID those that can be closed</description>
    <formula>Plan__r.Days_Behind_on_Payroll__c</formula>
    <inlineHelpText>Copied from Plan Record - Used on Late Payroll Cases to ID those that can be closed</inlineHelpText>
    <label>Days Behind On Payroll</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>