force-app/main/default/objects/Case/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <inlineHelpText>Link to document for Compliance review</inlineHelpText>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>