force-app/main/default/objects/Case/fields/Dollar_Amount_of_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Amount_of_Adjustment__c</fullName>
    <description>Entered by Operations - verifies dollar amount included in an adjustment operation</description>
    <inlineHelpText>Entered by Operations - verifies dollar amount included in an adjustment operation</inlineHelpText>
    <label>Dollar Amount of Adjustment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>