force-app/main/default/objects/Case/fields/Eligible_for_Archive__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Archive__c</fullName>
    <formula>IF(

DATEVALUE(ClosedDate) &lt; TODAY()-365 &amp;&amp;
 IsClosed = true &amp;&amp;
(DATEVALUE(LastModifiedDate) &lt; TODAY()-90 ||
(LastModifiedById = &quot;0051G000006IsUi&quot; ||
LastModifiedById = &quot;0051G0000069ZB1&quot; ||
LastModifiedById = &quot;0051G0000069uOp&quot;)), 

true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Archive</label>
    <type>Checkbox</type>
</CustomField>