force-app/main/default/objects/Case/fields/Enhancement_Status__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Status__c</fullName>
    <label>Enhancement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Awaiting Ephibian</fullName>
            </value>
            <value>
                <fullName>Awaiting Priority</fullName>
            </value>
            <value>
                <fullName>Awaiting Stakeholder</fullName>
            </value>
            <value>
                <fullName>Development in Progress</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>On Roadmap</fullName>
            </value>
            <value>
                <fullName>PRKS Review</fullName>
            </value>
            <value>
                <fullName>Product Document in Progress</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Won&apos;t Do</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>