force-app/main/default/objects/Case/fields/Enhancement_System__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_System__c</fullName>
    <label>Enhancement System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Paradigm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>