force-app/main/default/objects/Case/fields/escalatedImg__c.field-meta.xml
<CustomField>
    <fullName>escalatedImg__c</fullName>
    <formula>IF( Account.Escalated__c ,
IMAGE(&quot;/resource/alarmGif&quot;,&quot;Escalated&quot;,32,32),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalated</label>
    <type>Text</type>
</CustomField>