force-app/main/default/objects/Case/fields/Estimated_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Due_Date__c</fullName>
    <description>Estimated Due Date of project</description>
    <inlineHelpText>Estimated Due Date of project</inlineHelpText>
    <label>Estimated Due Date</label>
    <type>Date</type>
</CustomField>