force-app/main/default/objects/Case/fields/EvenOdd__c.field-meta.xml
<CustomField>
    <fullName>EvenOdd__c</fullName>
    <formula>IF(MOD( VALUE(CaseNumber),2)=0,&quot;Even&quot;,&quot;Odd&quot;)</formula>
    <label>EvenOdd</label>
    <type>Text</type>
</CustomField>