force-app/main/default/objects/Case/fields/Excess_Cash_Amount__c.field-meta.xml
<CustomField>
    <fullName>Excess_Cash_Amount__c</fullName>
    <description>Amount of excess cash at the time the case was created</description>
    <inlineHelpText>Amount of excess cash at the time the case was created</inlineHelpText>
    <label>Excess Cash Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>