force-app/main/default/objects/Case/fields/Excess_Cash_Date__c.field-meta.xml
<CustomField>
    <fullName>Excess_Cash_Date__c</fullName>
    <description>Date Excess Cash Amount is recorded</description>
    <inlineHelpText>Date Excess Cash Amount is recorded</inlineHelpText>
    <label>Excess Cash Date</label>
    <type>Date</type>
</CustomField>