force-app/main/default/objects/Case/fields/Expected_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Expected_Days_to_Close__c</fullName>
    <description>Calculated from case&apos;s SLA and communicated to clients when case is transferred to an ops team (Compliance, Payroll, R&amp;W, A&amp;F).</description>
    <label>Expected Days to Close</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>