force-app/main/default/objects/Case/fields/Feedback_Category__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Category__c</fullName>
    <description>Used to categorize client feedback cases</description>
    <inlineHelpText>Used to categorize client feedback cases</inlineHelpText>
    <label>Feedback Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Feature Enhancement</fullName>
            </value>
            <value>
                <fullName>Fee Feedback</fullName>
            </value>
            <value>
                <fullName>Process Improvements</fullName>
            </value>
            <value>
                <fullName>Reporting Needs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>