force-app/main/default/objects/Case/fields/Final_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Sent__c</fullName>
    <description>Date final notice was sent to client for payroll rejects, aged cash, unidentified deposit, etc.</description>
    <inlineHelpText>Date final notice was sent to client for payroll rejects, aged cash, unidentified deposit, etc.</inlineHelpText>
    <label>Final Notice Sent</label>
    <type>Date</type>
</CustomField>