force-app/main/default/objects/Case/fields/First_Response_SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>First_Response_SLA_Met__c</fullName>
    <formula>((( First_Response__c -  Goal_FR_DT_Stamp__c ) &lt;= 0

&amp;&amp;

NOT(ISNULL(First_Response__c)))

||

ISNULL(Goal_FR_DT_Stamp__c))

&amp;&amp;

 Custom_SLA_Active__c = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Response SLA Met</label>
    <type>Checkbox</type>
</CustomField>