force-app/main/default/objects/Case/fields/First_Response_SLA_Violation__c.field-meta.xml
<CustomField>
    <fullName>First_Response_SLA_Violation__c</fullName>
    <formula>IF(NOW()&gt;Goal_FR_DT_Stamp__c&amp;&amp;First_Response_SLA_Met__c=false,true,false)

&amp;&amp;

 Custom_SLA_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Response SLA Violation</label>
    <type>Checkbox</type>
</CustomField>