force-app/main/default/objects/Case/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Date you want to follow up on the Case with the Client</description>
    <inlineHelpText>Date you want to follow up on the Case with the Client</inlineHelpText>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>