force-app/main/default/objects/Case/fields/Force_Out_Count__c.field-meta.xml
<CustomField>
    <fullName>Force_Out_Count__c</fullName>
    <description>Number of term employees forced out of the plan</description>
    <inlineHelpText>Number of term employees forced out of the plan</inlineHelpText>
    <label>Force Out Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>