force-app/main/default/objects/Case/fields/Force_Out_Name_List__c.field-meta.xml
<CustomField>
    <fullName>Force_Out_Name_List__c</fullName>
    <description>List of individuals to be forced out of plan</description>
    <inlineHelpText>List of individuals to be forced out of plan</inlineHelpText>
    <label>Force Out Name List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>