force-app/main/default/objects/Case/fields/Force_Out_Threshold_Increase_Fee__c.field-meta.xml
<CustomField>
    <fullName>Force_Out_Threshold_Increase_Fee__c</fullName>
    <description>Fee Amount charged for Amending Plan to increase Force Out Threshold</description>
    <inlineHelpText>Fee Amount charged for Amending Plan to increase Force Out Threshold</inlineHelpText>
    <label>Force Out Threshold Increase Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>