force-app/main/default/objects/Case/fields/ForceDist_Address__c.field-meta.xml
<CustomField>
    <fullName>ForceDist_Address__c</fullName>
    <description>Used in ForceDist Cases for Docusign Merge</description>
    <inlineHelpText>Used in ForceDist Cases for Docusign Merge</inlineHelpText>
    <label>ForceDist Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>