force-app/main/default/objects/Case/fields/ForceDist_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>ForceDist_Billing_Amount__c</fullName>
    <description>(Cert Notice Count * $10) + (Look Up Names Count * $25)</description>
    <formula>( Certified_Notice_Count__c * 10) + ( Look_Up_Name_Count__c * 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Cert Notice Count * $10) + (Look Up Names Count * $25)</inlineHelpText>
    <label>ForceDist Billing Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>