force-app/main/default/objects/Case/fields/ForceDist_CityStateZip__c.field-meta.xml
<CustomField>
    <fullName>ForceDist_CityStateZip__c</fullName>
    <description>Used for Force Dist Cases</description>
    <inlineHelpText>Used for Force Dist Cases</inlineHelpText>
    <label>ForceDist CityStateZip</label>
    <type>TextArea</type>
</CustomField>