force-app/main/default/objects/Case/fields/ForceDist_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>ForceDist_Email_Date__c</fullName>
    <description>Date Force Dist Survey Email  Sent</description>
    <inlineHelpText>Date Force Dist Survey Email  Sent</inlineHelpText>
    <label>ForceDist Email Date</label>
    <type>Date</type>
</CustomField>