force-app/main/default/objects/Case/fields/ForceDist_Phone__c.field-meta.xml
<CustomField>
    <fullName>ForceDist_Phone__c</fullName>
    <description>Phone number that will be merged into the FPS Trust Agreement</description>
    <inlineHelpText>Phone number that will be merged into the FPS Trust Agreement</inlineHelpText>
    <label>ForceDist Phone</label>
    <type>Phone</type>
</CustomField>