force-app/main/default/objects/Case/fields/ForceDist_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>ForceDist_Plan_Name__c</fullName>
    <description>Plan name that will merge into the FPS Trust Agreement</description>
    <inlineHelpText>Plan name that will merge into the FPS Trust Agreement</inlineHelpText>
    <label>ForceDist Plan Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>