force-app/main/default/objects/Case/fields/ForceOut_Threshold_Fee__c.field-meta.xml
<CustomField>
    <fullName>ForceOut_Threshold_Fee__c</fullName>
    <defaultValue>195</defaultValue>
    <description>Hidden Report field</description>
    <inlineHelpText>Hidden Report field</inlineHelpText>
    <label>ForceOut Threshold Fee</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>