force-app/main/default/objects/Case/fields/Forfeiture_Plan_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Plan_Asset_Amount__c</fullName>
    <description>Amount in Forfeiture for Operations to Liquidate</description>
    <inlineHelpText>Amount in Forfeiture for Operations to Liquidate</inlineHelpText>
    <label>Forfeiture/Plan Asset amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>