force-app/main/default/objects/Case/fields/FPS_EIN__c.field-meta.xml
<CustomField>
    <fullName>FPS_EIN__c</fullName>
    <description>EIN used to merge into FPS Trust Agree DocuSign for force out distribution cases</description>
    <inlineHelpText>EIN used to merge into FPS Trust Agree DocuSign for force out distribution cases</inlineHelpText>
    <label>FPS EIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>