force-app/main/default/objects/Case/fields/FPS_Required__c.field-meta.xml
<CustomField>
    <fullName>FPS_Required__c</fullName>
    <description>Confirms if FPS Trust Agree is required for 2021 Force Out Distribution Process</description>
    <inlineHelpText>Confirms if FPS Trust Agree is required for 2021 Force Out Distribution Process</inlineHelpText>
    <label>FPS Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>