force-app/main/default/objects/Case/fields/Full_Case_Archive__c.field-meta.xml
<CustomField>
    <fullName>Full_Case_Archive__c</fullName>
    <formula>IF(

DATEVALUE(ClosedDate) &lt; TODAY()-730 &amp;&amp;
IsClosed = true &amp;&amp;
(DATEVALUE(LastModifiedDate) &lt; TODAY()-90 ||
(LastModifiedById = &quot;00500000006xxo2&quot; ||
LastModifiedById = &quot;0051G0000069ZB1&quot;)),

true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Case Archive</label>
    <type>Checkbox</type>
</CustomField>