force-app/main/default/objects/Case/fields/Fund_Change_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Change_Effective_Date__c</fullName>
    <description>For FIn Ops, Date Fund Change Takes Effect</description>
    <label>Fund Change Effective Date</label>
    <type>Date</type>
</CustomField>