force-app/main/default/objects/Case/fields/Fund_List__c.field-meta.xml
<CustomField>
    <fullName>Fund_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund List Case is associated with.</description>
    <inlineHelpText>Fund List Case is associated with.</inlineHelpText>
    <label>Fund List</label>
    <referenceTo>Fund_List__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>