force-app/main/default/objects/Case/fields/Funding_Information__c.field-meta.xml
<CustomField>
    <fullName>Funding_Information__c</fullName>
    <description>Verify funding information for adjustment</description>
    <inlineHelpText>Verify funding information for adjustment</inlineHelpText>
    <label>Funding Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Client Authorizes UBQT to ACH</fullName>
            </value>
            <value>
                <fullName>From Operations Account</fullName>
            </value>
            <value>
                <fullName>Place in Cash Off-Setting</fullName>
            </value>
            <value>
                <fullName>Place in Forfeitures</fullName>
            </value>
            <value>
                <fullName>Reclassification Only</fullName>
            </value>
            <value>
                <fullName>Return to Funding Account from Client</fullName>
            </value>
            <value>
                <fullName>Return to Funding Account on File</fullName>
            </value>
            <value>
                <fullName>Sweep to Omnibus Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>