force-app/main/default/objects/Case/fields/Funds_Vetted__c.field-meta.xml
<CustomField>
    <fullName>Funds_Vetted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funds Vetted</label>
    <type>Checkbox</type>
</CustomField>