force-app/main/default/objects/Case/fields/Future_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Review_Date__c</fullName>
    <description>Once case is closed, reminder case is created on this date to verify work is complete.</description>
    <inlineHelpText>Once case is closed, reminder case is created on this date to verify work is complete.</inlineHelpText>
    <label>Future Review Date</label>
    <type>Date</type>
</CustomField>