force-app/main/default/objects/Case/fields/Goal_Close_DT_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Goal_Close_DT_Stamp__c</fullName>
    <label>Goal Close DT Stamp</label>
    <type>DateTime</type>
</CustomField>