force-app/main/default/objects/Case/fields/Goal_Close_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Goal_Close_Formatted__c</fullName>
    <description>Formats closure goal for external email templates as &quot;Month Day&quot;.  Example: September 4th</description>
    <formula>CASE( MONTH( DATEVALUE( Goal_Close_DT_Stamp__c ) ),
  1, &quot;January &quot;,
  2, &quot;February &quot;,
  3, &quot;March &quot;,
  4, &quot;April &quot;,
  5, &quot;May &quot;,
  6, &quot;June &quot;,
  7, &quot;July &quot;,
  8, &quot;August &quot;,
  9, &quot;September &quot;,
  10, &quot;October &quot;,
  11, &quot;November &quot;,
  12, &quot;December &quot;,
  &quot;&quot; ) &amp;
TEXT( DAY( DATEVALUE( Goal_Close_DT_Stamp__c ) ) ) &amp;
CASE( DAY( DATEVALUE( Goal_Close_DT_Stamp__c ) ),
  1, &quot;st&quot;,
  2, &quot;nd&quot;,
  3, &quot;rd&quot;,
  21, &quot;st&quot;,
  22, &quot;nd&quot;,
  23, &quot;rd&quot;,
  31, &quot;st&quot;,
  &quot;th&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Close Formatted</label>
    <type>Text</type>
</CustomField>