force-app/main/default/objects/Case/fields/Goal_FR_DT_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Goal_FR_DT_Stamp__c</fullName>
    <label>Goal FR DT Stamp</label>
    <type>DateTime</type>
</CustomField>