force-app/main/default/objects/Case/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <description>Reissue Request field</description>
    <inlineHelpText>Gross amount of distribution reissue request</inlineHelpText>
    <label>Gross Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>