force-app/main/default/objects/Case/fields/Implementation_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner_Full_Name__c</fullName>
    <formula>Implementation__r.Owner:User.FirstName + &quot; &quot; +  Implementation__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Owner Full Name</label>
    <type>Text</type>
</CustomField>