force-app/main/default/objects/Case/fields/Implementation_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner_Title__c</fullName>
    <formula>Implementation__r.Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Owner Title</label>
    <type>Text</type>
</CustomField>