force-app/main/default/objects/Case/fields/Inquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Source__c</fullName>
    <description>May be replaced by Inquiry Source Team - this was update by process where Inquiry Source Team is a formula field.   This field has data missing for 2+ years.   Process Builder was looking to &quot;Owner ID = Compliance&quot; which never ran.</description>
    <inlineHelpText>May be replaced by Inquiry Source Team - this was update by process where Inquiry Source Team is a formula field.   This field has data missing for 2+ years.   Process Builder was looking to &quot;Owner ID = Compliance&quot; which never ran.</inlineHelpText>
    <label>Inquiry Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>New Plan</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Savers</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Transitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>