force-app/main/default/objects/Case/fields/Inquiry_Source_Team__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Source_Team__c</fullName>
    <description>Used for detailing team (CST) that created this case for the cases&apos; owner</description>
    <formula>TEXT(CreatedBy.Team__c)</formula>
    <inlineHelpText>Used for detailing team (CST) that created this case for the cases&apos; owner</inlineHelpText>
    <label>Inquiry Source Team</label>
    <type>Text</type>
</CustomField>