force-app/main/default/objects/Case/fields/Is_Ancillary_Billing_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Ancillary_Billing_Needed__c</fullName>
    <description>Is Ancillary Billing Needed for this case request? If yes please navigate to the Case Feed View and create an ancillary billing opportunity.</description>
    <inlineHelpText>Is Ancillary Billing Needed for this case request? If yes please navigate to the Case Feed View and create an ancillary billing opportunity.</inlineHelpText>
    <label>Is Ancillary Billing Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>